--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -55,11 +55,11 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Charity">
+                <Tab text="Donations">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <TextArea fx:id="charityTextArea" layoutX="65.0" layoutY="108.0" prefHeight="200.0"
+                                <TextArea fx:id="donationsTextArea" layoutX="65.0" layoutY="108.0" prefHeight="200.0"
                                           prefWidth="385.0" stylesheets="@inflationManagerMain.css"
                                           AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
@@ -82,8 +82,8 @@
                AnchorPane.leftAnchor="321.0"/>
         <Label fx:id="plannedTransactionsLabel" layoutX="381.0" layoutY="632.0" text="0" AnchorPane.bottomAnchor="51.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Label layoutX="458.0" layoutY="593.0" text="Payment plan" AnchorPane.bottomAnchor="80.0"
-               AnchorPane.leftAnchor="458.0">
+        <Label layoutX="442.0" layoutY="593.0" text="Payment plan" AnchorPane.bottomAnchor="80.0"
+               AnchorPane.leftAnchor="442.0">
             <font>
                 <Font size="18.0"/>
             </font>
@@ -114,25 +114,25 @@
         <TextField fx:id="inflationAmountTextField" layoutX="695.0" layoutY="621.0" prefHeight="25.0" prefWidth="200.0"
                    promptText="Inflation amount" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="695.0"
                    AnchorPane.rightAnchor="5.0"/>
-        <Label layoutX="458.0" layoutY="617.0" text="Payout:" AnchorPane.bottomAnchor="66.0"
-               AnchorPane.leftAnchor="458.0"/>
-        <Label layoutX="471.0" layoutY="650.0" text="Fees:" AnchorPane.bottomAnchor="33.0"
+        <Label layoutX="459.0" layoutY="617.0" text="Payout:" AnchorPane.bottomAnchor="66.0"
+               AnchorPane.leftAnchor="459.0"/>
+        <Label layoutX="471.0" layoutY="649.0" text="Fees:" AnchorPane.bottomAnchor="34.0"
                AnchorPane.leftAnchor="471.0"/>
         <Label fx:id="feesPaidLabel" layoutX="513.0" layoutY="650.0" text="0 XLM" AnchorPane.bottomAnchor="33.0"
                AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="470.0" layoutY="667.0" text="Total:" AnchorPane.bottomAnchor="16.0"
+        <Label layoutX="470.0" layoutY="666.0" text="Total:" AnchorPane.bottomAnchor="17.0"
                AnchorPane.leftAnchor="470.0"/>
-        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="667.0" text="0 XLM" AnchorPane.bottomAnchor="16.0"
+        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="666.0" text="0 XLM" AnchorPane.bottomAnchor="17.0"
                AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="458.0" layoutY="633.0" text="Charity:" AnchorPane.bottomAnchor="50.0"
-               AnchorPane.leftAnchor="458.0"/>
-        <Label fx:id="toKeepForCharityLabel" layoutX="513.0" layoutY="634.0" text="0 XLM" AnchorPane.bottomAnchor="49.0"
-               AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="327.0" layoutY="648.0" text="Charity:" AnchorPane.bottomAnchor="35.0"
-               AnchorPane.leftAnchor="327.0"/>
-        <Label fx:id="plannedCharityLabel" layoutX="381.0" layoutY="648.0" text="0" AnchorPane.bottomAnchor="35.0"
+        <Label layoutX="441.0" layoutY="633.0" text="Donations:" AnchorPane.bottomAnchor="50.0"
+               AnchorPane.leftAnchor="441.0"/>
+        <Label fx:id="toKeepForDonationsLabel" layoutX="513.0" layoutY="634.0" text="0 XLM"
+               AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="513.0"/>
+        <Label layoutX="309.0" layoutY="646.0" text="Donations:" AnchorPane.bottomAnchor="37.0"
+               AnchorPane.leftAnchor="309.0"/>
+        <Label fx:id="plannedDonationsLabel" layoutX="381.0" layoutY="647.0" text="0" AnchorPane.bottomAnchor="36.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Button fx:id="saveCharityBtn" layoutX="155.0" layoutY="670.0" mnemonicParsing="false" prefHeight="25.0"
-                prefWidth="140.0" text="Save charity" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="155.0"/>
+        <Button fx:id="saveDonationsBtn" layoutX="155.0" layoutY="670.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save donations" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="155.0"/>
     </children>
 </AnchorPane>
