--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="transactionPlannerStage" minHeight="700.0" minWidth="900.0" prefHeight="700.0" prefWidth="900.0"
+<AnchorPane fx:id="transactionPlannerStage" minHeight="700.0" minWidth="900.0" prefHeight="706.0" prefWidth="900.0"
             xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.lumenaut.poolmanager.TransactionsController">
     <children>
@@ -23,8 +23,8 @@
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="612.0" prefWidth="842.0">
                             <children>
                                 <TextArea fx:id="transactionPlanTextArea" editable="false" layoutX="58.0"
-                                          layoutY="103.0" prefHeight="200.0" prefWidth="200.0"
-                                          stylesheets="@inflationManagerMain.css" AnchorPane.bottomAnchor="0.0"
+                                          layoutY="103.0" prefHeight="554.0" prefWidth="900.0"
+                                          stylesheets="@inflationManagerMain.css" AnchorPane.bottomAnchor="9.0"
                                           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                                           AnchorPane.topAnchor="0.0"/>
                             </children>
@@ -69,70 +69,73 @@
                 </Tab>
             </tabs>
         </TabPane>
-        <Button fx:id="executeTransactionBtn" disable="true" layoutX="695.0" layoutY="629.0" mnemonicParsing="false"
+        <Button fx:id="executeTransactionBtn" disable="true" layoutX="695.0" layoutY="656.0" mnemonicParsing="false"
                 prefHeight="39.0" prefWidth="200.0" stylesheets="@inflationManagerMain.css" text="EXECUTE TRANSACTIONS"
-                AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="695.0" AnchorPane.rightAnchor="5.0"/>
-        <Button fx:id="rebuildTransactionPlanBtn" layoutX="5.0" layoutY="609.0" mnemonicParsing="false"
-                prefHeight="47.0" prefWidth="290.0" text="Rebuild transaction plan" AnchorPane.bottomAnchor="63.0"
+                AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="695.0" AnchorPane.rightAnchor="5.0"/>
+        <Button fx:id="rebuildTransactionPlanBtn" layoutX="5.0" layoutY="589.0" mnemonicParsing="false"
+                prefHeight="25.0" prefWidth="290.0" text="Rebuild transaction plan" AnchorPane.bottomAnchor="92.0"
                 AnchorPane.leftAnchor="5.0"/>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="105.0" layoutX="303.0" layoutY="590.0"
-                   stroke="BLACK" strokeType="INSIDE" width="385.0" AnchorPane.bottomAnchor="5.0"
+                   stroke="BLACK" strokeType="INSIDE" width="385.0" AnchorPane.bottomAnchor="11.0"
                    AnchorPane.leftAnchor="303.0"/>
-        <Label layoutX="321.0" layoutY="632.0" text="Planned:" AnchorPane.bottomAnchor="51.0"
+        <Label layoutX="321.0" layoutY="632.0" text="Planned:" AnchorPane.bottomAnchor="57.0"
                AnchorPane.leftAnchor="321.0"/>
-        <Label fx:id="plannedTransactionsLabel" layoutX="381.0" layoutY="632.0" text="0" AnchorPane.bottomAnchor="51.0"
+        <Label fx:id="plannedTransactionsLabel" layoutX="381.0" layoutY="632.0" text="0" AnchorPane.bottomAnchor="57.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Label layoutX="442.0" layoutY="593.0" text="Payment plan" AnchorPane.bottomAnchor="80.0"
+        <Label layoutX="442.0" layoutY="593.0" text="Payment plan" AnchorPane.bottomAnchor="86.0"
                AnchorPane.leftAnchor="442.0">
             <font>
                 <Font size="18.0"/>
             </font>
         </Label>
-        <Label fx:id="toBePaidLabel" layoutX="513.0" layoutY="618.0" text="0 XLM" AnchorPane.bottomAnchor="65.0"
+        <Label fx:id="toBePaidLabel" layoutX="513.0" layoutY="618.0" text="0 XLM" AnchorPane.bottomAnchor="71.0"
                AnchorPane.leftAnchor="513.0"/>
-        <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="641.0" mnemonicParsing="false" prefHeight="25.0"
-                prefWidth="140.0" text="Save plan" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="5.0"/>
-        <Label layoutX="317.0" layoutY="602.0" text="Excluded:" AnchorPane.bottomAnchor="81.0"
+        <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="617.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save plan" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="5.0"/>
+        <Label layoutX="317.0" layoutY="602.0" text="Excluded:" AnchorPane.bottomAnchor="87.0"
                AnchorPane.leftAnchor="317.0"/>
-        <Label fx:id="excludedTransactionsLabel" layoutX="381.0" layoutY="602.0" text="0" AnchorPane.bottomAnchor="81.0"
+        <Label fx:id="excludedTransactionsLabel" layoutX="381.0" layoutY="602.0" text="0" AnchorPane.bottomAnchor="87.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Button fx:id="saveExclusionsBtn" layoutX="5.0" layoutY="674.0" mnemonicParsing="false" prefHeight="17.0"
-                prefWidth="140.0" text="Save exclusions" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0"/>
-        <Button fx:id="saveReroutingBtn" layoutX="155.0" layoutY="619.0" mnemonicParsing="false" prefHeight="25.0"
-                prefWidth="140.0" text="Save rerouting" AnchorPane.bottomAnchor="34.0" AnchorPane.leftAnchor="155.0"/>
-        <Label layoutX="315.0" layoutY="617.0" text="Rerouted:" AnchorPane.bottomAnchor="66.0"
+        <Button fx:id="saveExclusionsBtn" layoutX="5.0" layoutY="645.0" mnemonicParsing="false" prefHeight="17.0"
+                prefWidth="140.0" text="Save exclusions" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="5.0"/>
+        <Button fx:id="saveReroutingBtn" layoutX="155.0" layoutY="617.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save rerouting" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="155.0"/>
+        <Label layoutX="315.0" layoutY="617.0" text="Rerouted:" AnchorPane.bottomAnchor="72.0"
                AnchorPane.leftAnchor="315.0"/>
-        <Label fx:id="reroutedTransactionsLabel" layoutX="381.0" layoutY="617.0" text="0" AnchorPane.bottomAnchor="66.0"
+        <Label fx:id="reroutedTransactionsLabel" layoutX="381.0" layoutY="617.0" text="0" AnchorPane.bottomAnchor="72.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Label layoutX="316.0" layoutY="670.0" text="Executed:" AnchorPane.bottomAnchor="13.0"
+        <Label layoutX="316.0" layoutY="670.0" text="Executed:" AnchorPane.bottomAnchor="19.0"
                AnchorPane.leftAnchor="316.0"/>
-        <Label fx:id="executedTransactionsLabel" layoutX="381.0" layoutY="670.0" text="0" AnchorPane.bottomAnchor="13.0"
+        <Label fx:id="executedTransactionsLabel" layoutX="381.0" layoutY="670.0" text="0" AnchorPane.bottomAnchor="19.0"
                AnchorPane.leftAnchor="381.0"/>
         <TextField fx:id="signingKeyTextField" layoutX="695.0" layoutY="590.0" prefHeight="25.0" prefWidth="200.0"
-                   promptText="Signing Key" AnchorPane.bottomAnchor="85.0" AnchorPane.leftAnchor="695.0"
+                   promptText="Signing Key" AnchorPane.bottomAnchor="91.0" AnchorPane.leftAnchor="695.0"
                    AnchorPane.rightAnchor="5.0"/>
         <TextField fx:id="inflationAmountTextField" layoutX="695.0" layoutY="621.0" prefHeight="25.0" prefWidth="200.0"
-                   promptText="Inflation amount" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="695.0"
+                   promptText="Inflation amount" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="695.0"
                    AnchorPane.rightAnchor="5.0"/>
-        <Label layoutX="459.0" layoutY="617.0" text="Payout:" AnchorPane.bottomAnchor="66.0"
+        <Label layoutX="459.0" layoutY="617.0" text="Payout:" AnchorPane.bottomAnchor="72.0"
                AnchorPane.leftAnchor="459.0"/>
-        <Label layoutX="471.0" layoutY="649.0" text="Fees:" AnchorPane.bottomAnchor="34.0"
+        <Label layoutX="471.0" layoutY="649.0" text="Fees:" AnchorPane.bottomAnchor="40.0"
                AnchorPane.leftAnchor="471.0"/>
-        <Label fx:id="feesPaidLabel" layoutX="513.0" layoutY="650.0" text="0 XLM" AnchorPane.bottomAnchor="33.0"
+        <Label fx:id="feesPaidLabel" layoutX="513.0" layoutY="650.0" text="0 XLM" AnchorPane.bottomAnchor="39.0"
                AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="470.0" layoutY="666.0" text="Total:" AnchorPane.bottomAnchor="17.0"
+        <Label layoutX="470.0" layoutY="666.0" text="Total:" AnchorPane.bottomAnchor="23.0"
                AnchorPane.leftAnchor="470.0"/>
-        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="666.0" text="0 XLM" AnchorPane.bottomAnchor="17.0"
+        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="666.0" text="0 XLM" AnchorPane.bottomAnchor="23.0"
                AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="441.0" layoutY="633.0" text="Donations:" AnchorPane.bottomAnchor="50.0"
+        <Label layoutX="441.0" layoutY="633.0" text="Donations:" AnchorPane.bottomAnchor="56.0"
                AnchorPane.leftAnchor="441.0"/>
         <Label fx:id="toKeepForDonationsLabel" layoutX="513.0" layoutY="634.0" text="0 XLM"
-               AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="309.0" layoutY="646.0" text="Donations:" AnchorPane.bottomAnchor="37.0"
+               AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="513.0"/>
+        <Label layoutX="309.0" layoutY="646.0" text="Donations:" AnchorPane.bottomAnchor="43.0"
                AnchorPane.leftAnchor="309.0"/>
-        <Label fx:id="plannedDonationsLabel" layoutX="381.0" layoutY="647.0" text="0" AnchorPane.bottomAnchor="36.0"
+        <Label fx:id="plannedDonationsLabel" layoutX="381.0" layoutY="647.0" text="0" AnchorPane.bottomAnchor="42.0"
                AnchorPane.leftAnchor="381.0"/>
-        <Button fx:id="saveDonationsBtn" layoutX="155.0" layoutY="670.0" mnemonicParsing="false" prefHeight="25.0"
-                prefWidth="140.0" text="Save donations" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="155.0"/>
+        <Button fx:id="saveDonationsBtn" layoutX="155.0" layoutY="645.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Save donations" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="155.0"/>
+        <Button fx:id="extractDonationsBtn" layoutX="5.0" layoutY="673.0" mnemonicParsing="false" prefHeight="25.0"
+                prefWidth="140.0" text="Extract donations data" AnchorPane.bottomAnchor="8.0"
+                AnchorPane.leftAnchor="5.0"/>
     </children>
 </AnchorPane>
