--- a/manager/src/main/resources/inflationManagerTransactions.fxml
+++ b/manager/src/main/resources/inflationManagerTransactions.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="transactionPlannerStage" minHeight="700.0" minWidth="900.0" prefHeight="706.0" prefWidth="900.0"
             xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1"
@@ -82,14 +81,8 @@
                AnchorPane.leftAnchor="334.0"/>
         <Label fx:id="plannedTransactionsLabel" layoutX="389.0" layoutY="622.0" text="0" AnchorPane.bottomAnchor="67.0"
                AnchorPane.leftAnchor="389.0"/>
-        <Label layoutX="442.0" layoutY="593.0" text="Payment plan" AnchorPane.bottomAnchor="86.0"
-               AnchorPane.leftAnchor="442.0">
-            <font>
-                <Font size="18.0"/>
-            </font>
-        </Label>
-        <Label fx:id="toBePaidLabel" layoutX="513.0" layoutY="618.0" text="0 XLM" AnchorPane.bottomAnchor="71.0"
-               AnchorPane.leftAnchor="513.0"/>
+        <Label fx:id="totalToBePaidLabel" layoutX="547.0" layoutY="597.0" text="0 XLM" AnchorPane.bottomAnchor="92.0"
+               AnchorPane.leftAnchor="547.0"/>
         <Button fx:id="saveTransactionPlanBtn" layoutX="5.0" layoutY="642.0" mnemonicParsing="false" prefHeight="25.0"
                 prefWidth="140.0" text="Save plan" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="5.0"/>
         <Label layoutX="330.0" layoutY="595.0" text="Excluded:" AnchorPane.bottomAnchor="94.0"
@@ -114,20 +107,20 @@
         <TextField fx:id="inflationAmountTextField" layoutX="695.0" layoutY="621.0" prefHeight="25.0" prefWidth="200.0"
                    promptText="Inflation amount" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="695.0"
                    AnchorPane.rightAnchor="5.0"/>
-        <Label layoutX="459.0" layoutY="617.0" text="Payout:" AnchorPane.bottomAnchor="72.0"
-               AnchorPane.leftAnchor="459.0"/>
-        <Label layoutX="471.0" layoutY="649.0" text="Fees:" AnchorPane.bottomAnchor="40.0"
-               AnchorPane.leftAnchor="471.0"/>
-        <Label fx:id="feesPaidLabel" layoutX="513.0" layoutY="650.0" text="0 XLM" AnchorPane.bottomAnchor="39.0"
-               AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="470.0" layoutY="666.0" text="Total:" AnchorPane.bottomAnchor="23.0"
-               AnchorPane.leftAnchor="470.0"/>
-        <Label fx:id="totalPaidLabel" layoutX="513.0" layoutY="666.0" text="0 XLM" AnchorPane.bottomAnchor="23.0"
-               AnchorPane.leftAnchor="513.0"/>
-        <Label layoutX="441.0" layoutY="633.0" text="Donations:" AnchorPane.bottomAnchor="56.0"
-               AnchorPane.leftAnchor="441.0"/>
-        <Label fx:id="toKeepForDonationsLabel" layoutX="513.0" layoutY="634.0" text="0 XLM"
-               AnchorPane.bottomAnchor="55.0" AnchorPane.leftAnchor="513.0"/>
+        <Label layoutX="455.0" layoutY="595.0" text="Voters Payout:" AnchorPane.bottomAnchor="94.0"
+               AnchorPane.leftAnchor="455.0"/>
+        <Label layoutX="476.0" layoutY="628.0" text="Total Fees:" AnchorPane.bottomAnchor="61.0"
+               AnchorPane.leftAnchor="476.0"/>
+        <Label fx:id="totalFeesPaidLabel" layoutX="547.0" layoutY="629.0" text="0 XLM" AnchorPane.bottomAnchor="60.0"
+               AnchorPane.leftAnchor="547.0"/>
+        <Label layoutX="444.0" layoutY="672.0" text="Payment &amp; Fees:" AnchorPane.bottomAnchor="17.0"
+               AnchorPane.leftAnchor="444.0"/>
+        <Label fx:id="totalPaidLabel" layoutX="547.0" layoutY="673.0" text="0 XLM" AnchorPane.bottomAnchor="16.0"
+               AnchorPane.leftAnchor="547.0"/>
+        <Label layoutX="453.0" layoutY="612.0" text="Tot. donations:" AnchorPane.bottomAnchor="77.0"
+               AnchorPane.leftAnchor="453.0"/>
+        <Label fx:id="plannedDonationsAmountLabel" layoutX="547.0" layoutY="613.0" text="0 XLM"
+               AnchorPane.bottomAnchor="76.0" AnchorPane.leftAnchor="547.0"/>
         <Label layoutX="322.0" layoutY="634.0" text="Donations:" AnchorPane.bottomAnchor="55.0"
                AnchorPane.leftAnchor="322.0"/>
         <Label fx:id="plannedDonationsLabel" layoutX="389.0" layoutY="635.0" text="0" AnchorPane.bottomAnchor="54.0"
@@ -136,5 +129,9 @@
                AnchorPane.leftAnchor="310.0"/>
         <Label fx:id="plannedBeneficiariesLabel" layoutX="389.0" layoutY="648.0" text="0" AnchorPane.bottomAnchor="41.0"
                AnchorPane.leftAnchor="389.0"/>
+        <Label layoutX="450.0" layoutY="656.0" text="Pool donations:" AnchorPane.bottomAnchor="33.0"
+               AnchorPane.leftAnchor="450.0"/>
+        <Label fx:id="totalPoolDonationsLabel" layoutX="547.0" layoutY="657.0" text="0 XLM"
+               AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="547.0"/>
     </children>
 </AnchorPane>
